Update 'hello-world-go' component image to: quay.io/lucarval-rhtap/hellow-world-go:f2467b76af5c0877762561e4279c4aa8696f0c8d@sha256:2caef673a20cb962b9b002875138ddd46c25dddd1702908bb843c2075ffbe77b

--- a/components/hello-world-go/overlays/development/deployment-patch.yaml
+++ b/components/hello-world-go/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: hello-world-go
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: quay.io/lucarval-rhtap/hellow-world-go:f2467b76af5c0877762561e4279c4aa8696f0c8d@sha256:2caef673a20cb962b9b002875138ddd46c25dddd1702908bb843c2075ffbe77b
+          name: container-image
